<resources>
    <string name="app_name">Fitness Point</string>
    <string name="textview">Yoga is an old discipline from India. It is both spiritual and physical. Yoga uses breathing techniques, exercise and meditation. It helps to improve health and happiness. Yoga is the Sanskrit word for union. Patanjali was a pioneer of classical yoga. He defined yoga as "the cessation of the modification of the mind".
A person doing yoga will move from one posture to another, but there are also other aspects which are important in yoga, such as breath-work, mantras, mudras, meditation and much more. For example, the "sun-salutation" contains 12 poses of asanas, one after the other, and is said to help balance body and soul. There is a specific mantra for each asana. The "sun-salutation" is popularly known as "Suryanamaskar".</string>
    <string name="intro1"><![CDATA[ \n\nThe benefits of Surya Namaskar are manifold. It helps in the better functioning of the body and mental faculties. Here are a few benefits of Surya Namaskar: Helps to keep you disease-free and healthy Balances the body & mind Improves blood circulation Improves digestion system Strengthens the heart Stimulates abdominal muscles, respiratory system, lymphatic system, spinal nerves, and other internal organs]]></string>
    <string name="intro2">Tadasana or the Mountain Pose is a basic yoga pose that is very beneficial for our health. Beginners are often asked to practise this yoga pose. Although it is a basic yoga pose and won’t tire you out, practising it regularly can improve your health. If you master it, performing other asanas won’t seem like a challenge to you.</string>
    <string name="intro3">Parsvottanasana Benefits Improves flexibility. Parsvottanasana is a full-body workout. ... Brings balance and body awareness. ... Improves digestion. ... Ameliorates respiration. ... Calms the mind. ... Remedial to arthritis</string>
    <string name="intro4">Find a comfortable place and sit in any meditative posture like lotus pose or easy pose. Put a folded blanket under your pelvis to bring a natural slope of the thighs angle. It let the spine get its complete straightness.</string>
    <string name="stair">Primary Muscles Targeted: Quads, Glutes, Hamstrings, and Calves How to perform i)With a steady pace, go up and come down on the stairs for at least 10-15 minutes. It is your warm-up exercise.</string>
    <string name="info">Primary Muscles Targeted: Triceps and Deltoids How to perform: i)Start with a plank position keeping your arms and legs extended on the floor. ii)Keeping the same posture, crawl forward at steady pace. iii)Bear in mind to put more weight on your arms and less on our legs. iv)Do it for at least 60 seconds.</string>
    <string name="skipping">Primary Muscles Targeted: Shoulders, Quads, Glutes, and Calves. How to perform: i)Stand with your feet at shoulder width apart. Grasp the jump rope handles with both hands. ii)Use your wrists to swing the rope over your head. iii)Quickly hop over the rope as it comes towards the front of your feet. And repeat.</string>
    <string name="info2">Zumba is an interval workout. The classes move between high- and low-intensity dance moves designed to get your heart rate up and boost cardio endurance. The dance moves were designed to enhance flexibility. The high-and low-intensity intervals make Zumba an excellent cardio workout. Working up a sweat in the 60-minute classes burns an average of 369 calories more than cardio kickboxing or step aerobics. You’ll get a great cardio workout that melts fat, strengthens your core, and improves flexibility.</string>
    <string name="jogging">Jogging in place is one of the simplest ways to get your heart rate up if you\'re stuck inside. It doesn\'t have the same intensity as jogging outside, since there\'s no forward motion or wind resistance. But using your arms and adding forward motion by jogging around the house or up and down the stairs can help you sweat a little more. Begin by marching in place, lifting your knees and swinging your arms. i) Move into a light jog, keeping your feet close to the ground as you get a feel for the exercise. ii)As you warm up, start bringing your heels closer to your glutes each time you jog. iii)Add intensity by pumping your arms overhead, jogging faster, or raising the knees. iv)Repeat for 30 seconds to as many minutes as you can. You can also do this exercise in a cardio circuit.</string>
    <string name="burpees">Burpees are an exercise some of us may remember vividly from high school gym​ class. This tough exercise is so memorable because it works the entire body and gets the heart rate up in a very short period of time. i)Stand with feet about hip-width apart and squat to the floor, placing your hands on the floor in front of you. ii)In an explosive movement, jump the feet out behind you so that you\'re in a push-up position, on your hands and toes with your body in a straight line. iii)Do a push-up on your toes or knees (this is optional and adds quite a bit of intensity). iv)Immediately jump the feet back to start, stand up, and repeat for 10 to 15 reps or 30 to 60 seconds.</string>
    <string name="mountC">Mountain climbers are an advanced, high intensity exercise that will get your heart rate up and add intensity to your workouts. i)Begin in a push-up position on your hands and toes, back flat, and abs engaged. ii)Bring your right knee in towards the chest, resting the foot on the floor. iii)Jump up and switch feet in the air, bringing the left foot in and the right foot back. iv)Continue alternating the feet as fast as you safely can for 30 to 60 seconds.</string>
    <string name="SquatJumps">Squat jumps are a great way to add intensity to your workouts and really raise the heart rate. This is an advanced exercise that is high impact, so protect your joints by landing with soft knees. i)Begin with feet about hip-distance apart and engage the core. ii)Squat as low as possible, touching the floor with your fingertips if you can. Make sure you send the hips back to avoid putting too much pressure on the knees. iii)Jump up as high as you can, sweeping your arms overhead. iv)Land with soft knees back into your squat and repeat for 30 to 60 seconds.</string>
    <string name="butterfly">i)Sit tall on the floor with the soles of your feet together, knees bent out to sides. ii)Hold onto your ankles or feet, engage your abs, and slowly lower your body toward your feet as far as you can while pressing your knees toward the floor. iii)If you\'re too tight to bend over, simply press your knees down. iv)Hold this stretch for 30 seconds to 2 minutes.</string>
    <string name="Frog">i)Start on all fours. ii)Slide your knees wider than shoulder-width apart. iii)Turn your toes out and rest the inner edges of your feet flat on the floor. iv)Shift your hips back toward your heels. v)Move from your hands to your forearms to get a deeper stretch, if possible. vi)Hold for for 30 seconds to 2 minutes.</string>
    <string name="piriF">i)Sit on the floor with both legs extended in front of you. ii)Cross your right leg over your left, and place your right foot flat on the floor. iii)Place your right hand on the floor behind your body. iv)Place your left hand on your right quad or your left elbow on your right knee (as shown) and press your right leg to the left as you twist your torso to the right. v)If the spinal rotation bothers your back, take it out and simply use your left hand to pull your right quad in and to the left.</string>
    <string name="Standing">1)Standing Hamstring Stretch- i)Stand tall with your feet hip-width apart, knees slightly bent, arms by your sides. ii)Exhale as you bend forward at the hips, lowering your head toward floor, while keeping your head, neck and shoulders relaxed. iii)Wrap your arms around backs of your legs and hold anywhere from 45 seconds to two minutes. iv)Bend your knees and roll up when you\'re done.</string>

    <string-array name="planets_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>

    </string-array>
</resources>
