<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Cardio">
  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_weight="1"
      android:background="@color/backgroundBlue"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">


    <ImageView
        android:id="@+id/backCardio"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:rotation="180"
        app:srcCompat="@drawable/next"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/usernameProfile"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:paddingStart="115dp"
        android:paddingLeft="20dp"
        android:text="Cardio"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

  </LinearLayout>


  <ScrollView
      android:id="@+id/scrollView6"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:ignore="SpeakableTextPresentCheck"
      tools:layout_editor_absoluteY="-325dp"
      android:layout_marginTop="45dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView33"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:backgroundTint="#D6CDCD"
          android:shadowColor="#C10000"
          android:text="1. Jogging in Place"
          android:textColor="@color/black"
          android:textSize="25dp"
          android:textStyle="bold" />

      <ImageView
          android:id="@+id/imageView11"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          app:srcCompat="@drawable/jogging" />

      <TextView
          android:id="@+id/StHamStr"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="5dp"
          android:layout_marginRight="20dp"
          android:background="@drawable/bg_yellowish"
          android:backgroundTint="@color/Blue"
          android:clickable="true"
          android:gravity="center"
          android:paddingLeft="10dp"
          android:paddingTop="20dp"
          android:paddingRight="10dp"
          android:paddingBottom="20dp"
          android:text="@string/jogging"
          android:textColor="@color/white"
          android:textSize="16sp"
          android:visibility="visible" />

      <TextView
          android:id="@+id/textView34"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:paddingBottom="5dp"
          android:text="2. Burpees"
          android:textColor="#0C0A0A"
          android:textSize="25dp"
          android:textStyle="bold"
          tools:ignore="TextContrastCheck" />

      <ImageView
          android:id="@+id/imageView16"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="25dp"
          app:srcCompat="@drawable/burpees" />

      <TextView
          android:id="@+id/piriStr"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="5dp"
          android:layout_marginRight="20dp"
          android:background="@drawable/bg_yellowish"
          android:backgroundTint="@color/Blue"
          android:clickable="true"
          android:gravity="center"
          android:paddingLeft="10dp"
          android:paddingTop="20dp"
          android:paddingRight="10dp"
          android:paddingBottom="20dp"
          android:text="@string/burpees"
          android:textColor="@color/white"
          android:textSize="16sp"
          android:visibility="visible"/>

      <TextView
          android:id="@+id/textView35"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:paddingBottom="5dp"
          android:text="3. Mountain Climbers"
          android:textColor="#100F0F"
          android:textSize="25dp"
          android:textStyle="bold" />

      <ImageView
          android:id="@+id/imageView21"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          android:layout_marginBottom="15dp"
          app:srcCompat="@drawable/mount" />

      <TextView
          android:id="@+id/frogStr"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="5dp"
          android:layout_marginRight="20dp"
          android:background="@drawable/bg_yellowish"
          android:backgroundTint="@color/Blue"
          android:clickable="true"
          android:gravity="center"
          android:paddingLeft="10dp"
          android:paddingTop="20dp"
          android:paddingRight="10dp"
          android:paddingBottom="20dp"
          android:text="@string/mountC"
          android:textColor="@color/white"
          android:textSize="16sp"
          android:visibility="visible" />

      <TextView
          android:id="@+id/textView36"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:paddingBottom="5dp"
          android:text="4.  Squat Jumps"
          android:textColor="#0E0D0D"
          android:textSize="25dp"
          android:textStyle="bold" />

      <ImageView
          android:id="@+id/imageView20"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          android:layout_marginBottom="15dp"
          app:srcCompat="@drawable/squat" />

      <TextView
          android:id="@+id/butterStr"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="5dp"
          android:layout_marginRight="20dp"
          android:background="@drawable/bg_yellowish"
          android:backgroundTint="@color/Blue"
          android:clickable="true"
          android:gravity="center"
          android:paddingLeft="10dp"
          android:paddingTop="20dp"
          android:paddingRight="10dp"
          android:paddingBottom="20dp"
          android:text="@string/SquatJumps"
          android:textColor="@color/white"
          android:textSize="16sp"
          android:visibility="visible" />


    </LinearLayout>
  </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>