<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".Activity.Yoga">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:background="@color/backgroundBlue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/backYoga"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:rotation="180"
            app:srcCompat="@drawable/next"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/usernameProfile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:paddingStart="115dp"
            android:paddingLeft="20dp"
            android:text="Yoga"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#D6CDCD"
                android:shadowColor="#C10000"
                android:text="Introduction"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/StHamStr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_yellowish"
                android:backgroundTint="@color/Blue"
                android:clickable="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="@string/textview"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text=" 1.Surya Namaskar"
                android:textColor="#121111"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/surya1" />

            <TextView
                android:id="@+id/piriStr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_yellowish"
                android:backgroundTint="@color/Blue"
                android:clickable="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="@string/intro1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingBottom="5dp"
                android:text="2. Tadasana"
                android:textColor="#100F0F"
                android:textSize="22dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/yoga2" />

            <TextView
                android:id="@+id/frogStr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_yellowish"
                android:backgroundTint="@color/Blue"
                android:clickable="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="@string/intro2"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingBottom="5dp"
                android:text="3. Parsvottanasana"
                android:textColor="#131313"
                android:textSize="22dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="143dp"
                android:layout_height="126dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/yoga3" />

            <TextView
                android:id="@+id/butterStr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_yellowish"
                android:backgroundTint="@color/Blue"
                android:clickable="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="@string/intro3"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingBottom="5dp"
                android:text="4. Bhramari"
                android:textColor="#0C0C0C"
                android:textSize="22dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="143dp"
                android:layout_height="126dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/yoga4" />

            <TextView
                android:id="@+id/intro4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_yellowish"
                android:backgroundTint="@color/Blue"
                android:clickable="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="@string/intro4"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>